[package]
name = "app"
version = "0.1.0"
authors = ["jintz <keisuke.igimi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
http = "0.2.0"
juniper = "0.14.2"
mysql = "17.0.0"
